--- a/templates/account_folder/dashbord.html
+++ b/templates/account_folder/dashbord.html
@@ -7,7 +7,7 @@
         <!-- Content -->
         
         <div class="container-xxl flex-grow-1 container-p-y">
-          <img src="{{account_de.avatar.url}}" alt="user-avatar" class="d-block rounded" height="100" width="100" id="uploadedAvatar">
+          {% comment %} <img src="{{account_de.avatar.url}}" alt="user-avatar" class="d-block rounded" height="100" width="100" id="uploadedAvatar"> {% endcomment %}
 <br>
           <ul class="nav nav-pills flex-column flex-md-row mb-3">
             <li class="nav-item">
